# xpulumi-cmd-hook

./: CHANGELOG.md  README.md  pyproject.toml
xpulumi_cmd_hook/: __init__.py  __main__.py  cli.py  version.py
